[project]
name = "Felicette-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Felicette1963", email = "xorudlee4869@gamil.com"},
]
dependencies = []
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
